// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders grouping correctly when having itemsForDay 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Typography
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Typography>
    <Typography
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Typography>
  </Heading>
  <div>
    <Animatable(Grouping)
      animatableIndex={0}
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "url": "http://www.non_default_url.com",
            },
            "title": "Black Friday",
          },
        ]
      }
      theme={
        Object {
          "titleColor": null,
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
    <Animatable(Grouping)
      animatableIndex={1}
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "url": "http://www.non_default_url.com",
            },
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "url": "http://www.non_default_url.com",
            },
            "title": "Roll for the Galaxy",
          },
        ]
      }
      theme={
        Object {
          "titleColor": null,
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
  </div>
</div>
`;

exports[`renders the base component with required props 1`] = `
<div>
  <Heading
    border="bottom"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Typography
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Typography>
    <Typography
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Typography>
  </Heading>
  <div>
    <Container
      display="block"
      margin="small 0 0 0"
      textAlign="center"
    >
      No "To-Do's" for this day yet.
    </Container>
  </div>
</div>
`;
